# solstrale-desktop-rust

./: .gitignore  Cargo.toml  README.md  build.sh  build_with_oidn.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/adapt_render_output_20260211/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/interactive_camera_20260214/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/real_time_camera_updates_20260214/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/update_rust_edition_2024_20260305/: index.md  metadata.json  plan.md  spec.md
oidn/lib/: libOpenImageDenoise.so.2  libOpenImageDenoise.so.2.1.0  libOpenImageDenoise.so.2.2.1  libOpenImageDenoise.so.2.3.0  libOpenImageDenoise_device_cpu.so.2.1.0  libOpenImageDenoise_device_cpu.so.2.2.1  libOpenImageDenoise_device_cpu.so.2.3.0
resources/: scene.yaml
src/: help.rs  keyboard.rs  lib.rs  load_scene.rs  loading_output.rs  main.rs  render_button.rs  render_output.rs  reset_confirm.rs  save_image.rs  save_output.rs  save_scene.rs  scene.rs  scene.yaml  scene_model.rs  yaml_editor.rs  yaml_highlighter.rs
src/model/: albedo_shader.rs  blend.rs  bloom_post_processor.rs  box.rs  camera_config.rs  constant_medium.rs  custom_width_height.rs  denoise_post_processor.rs  glass.rs  half_screen_width_height.rs  hittable.rs  image.rs  lambertian.rs  light.rs  material.rs  metal.rs  mod.rs  normal_shader.rs  normal_texture.rs  obj_model.rs  orbit_camera.rs  path_tracing_shader.rs  plastic.rs  pos.rs  post_processor.rs  quad.rs  quarter_screen_width_height.rs  render_config.rs  rgb.rs  saturation_post_processor.rs  scene.rs  screen_width_height.rs  shader.rs  simple_shader.rs  sphere.rs  template.rs  texture.rs  transformation.rs  width_height.rs
tests/: render_control_tests.rs  render_output_data_structures.rs
