[package]
name = "solstrale-desktop-rust"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
solstrale = { git = "https://github.com/DanielPettersson/solstrale-rust.git", branch = "main", features = ["oidn-postprocessor"] }
eframe = { version = "0.27.2", features = ["persistence", "wayland", "wgpu"] }
egui_file = "0.17.0"
image = "0.25.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.33"
enum-map = { version = "2.7.3", features = ["serde"] }
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
moka = { version = "0.12.7", features = ["sync"] }
once_cell = "1.19.0"
derive_more = "0.99.17"
hhmmss = "0.1.0"
regex = "1.10.4"
dark-light = "1.1.1"
tera = { version = "1.19.1", default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"