[package]
name = "solstrale-desktop-rust"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[profile.release]
lto = true
codegen-units = 1

[features]
oidn-postprocessor = ["solstrale/oidn-postprocessor"]

[dependencies]
solstrale = { git = "https://github.com/DanielPettersson/solstrale-rust.git", branch = "main" }
eframe = { version = "0.29.1", features = ["persistence", "wayland", "wgpu"] }
egui_file = "0.19.0"
image = "0.25.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
enum-map = { version = "2.7.3", features = ["serde"] }
syntect = { version = "5.2.0", default-features = false, features = [
    "default-fancy",
] }
moka = { version = "0.12.8", features = ["sync"] }
once_cell = "1.20.2"
derive_more = { version = "1.0.0", features = ["constructor", "display"] }
hhmmss = "0.1.0"
regex = "1.11.0"
dark-light = "1.1.1"
tera = { version = "1.20.0", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.8"